(include_subdirs unqualified)

(library
 (name flambda2_validate)
 (wrapped true)
 (instrumentation (backend bisect_ppx))
 (flags
  (:standard
    -principal
    -open
    Flambda2_algorithms
    -open
    Flambda2_bound_identifiers
    -open
    Flambda2_identifiers
    -open
    Flambda2_kinds
    -open
    Flambda2_nominal
    -open
    Flambda2_numbers
    -open
    Flambda2_term_basics
    -open
    Flambda2_terms
    -open
    Flambda2_simplify
 ))
 (ocamlopt_flags
  (:standard -O3))
 (libraries
   ocamlcommon
   flambda2_simplify
   flambda2_simplify_shared
   flambda2_algorithms
   flambda2_terms
))
