(include_subdirs no)

(library
 (name flambda2_validate)
 (wrapped true)
 (instrumentation (backend bisect_ppx))
 (flags
  (:standard
    -w
    +a-4-9-40-41-42-44-45-48-66
    -warn-error A
    -principal
    -open
    Flambda2_algorithms
    -open
    Flambda2_bound_identifiers
    -open
    Flambda2_cmx
    -open
    Flambda2_identifiers
    -open
    Flambda2_kinds
    -open
    Flambda2_nominal
    -open
    Flambda2_numbers
    -open
    Flambda2_term_basics
    -open
    Flambda2_terms
    -open
    Flambda2_simplify
    -open
    Flambda2_lattices
    -open
    Flambda2_ui))
 (ocamlopt_flags
  (:standard -O3))
 (libraries
   ocamlcommon
   flambda2_cmx
   flambda2_simplify
   flambda2_simplify_shared
   flambda2_algorithms
   flambda2_terms
))
